--- a/frontend/src/components/style/CollectorHeader.css
+++ b/frontend/src/components/style/CollectorHeader.css
@@ -25,8 +25,8 @@
 
 .nav-links {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end; /* Aligns items to the right */
+    align-items: center;       /* Centers items vertically */
 }
 
 .nav-link {
